Use the cursor stored in Widget for regular surface as well.

The original CL crrev.com/c/903223 changed the GetCurosr logic
only for notification surface. Regular exo surface should do the same.

This also removes obsolete path.

Bug: 814600
Test: manual. See bug for repro step.
Change-Id: Icbdf000db30efa96aa056c1b7fe15d38822b7610
Reviewed-on: https://chromium-review.googlesource.com/956103
Reviewed-by: David Reveman <reveman@chromium.org>
Commit-Queue: Mitsuru Oshima <oshima@chromium.org>
Cr-Commit-Position: refs/heads/master@{#542347}
Former-commit-id: 46d3870fc70873949e34f263f6b71df7b3f3aaac